--- a/part2/notes/src/index.css
+++ b/part2/notes/src/index.css
@@ -33,6 +33,9 @@ input:focus {
   box-shadow: 0 0 0 3px #c7d2fe;
 }
 
+ul {
+  padding-left: 0.75em;
+}
 /* Primary Buttons */
 button {
   background-color: #4f46e5;
